--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -10,8 +10,20 @@
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = esp32-s3-devkitc-1-n16r8v
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.11.5
 	adafruit/Adafruit SSD1306@^2.5.7
+	knolleary/PubSubClient@^2.8
+	adafruit/DHT sensor library@^1.4.4
+	bblanchon/ArduinoJson@^6.21.2
+	khoih-prog/ESP32_C3_TimerInterrupt@^1.8.0
+	khoih-prog/ESP32TimerInterrupt@^2.3.0
+	bertmelis/Ticker-esp32@^1.1.0
+	paulstoffregen/Time@^1.6.1
+	claws/BH1750@^1.3.0
+
+[env]
+platform_packages = 
+	toolchain-riscv32-esp @ 8.4.0+2021r2-patch5
